[package]
name = "protweb"
version = "0.1.0"
authors = ["smo <aleksandr.smolkov@sprecher-automation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"

uuid = { version = "0.8", features = ["v4", "serde"] }
tera = "1.12.1"
tide = "0.16.0"
tide-tera = "0.2.4"
oauth2 = { version = "4.0.0", features = ["reqwest"], default-features = false  }
surf = { version = "2.1.0" }